--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ body {
 #myBtn {
   display: none;
   position: fixed;
-  bottom: 20px;
-  right: 30px;
+  bottom: 2em;
+  right: 2em;
   z-index: 99;
   font-size: 18px;
   border: none;
@@ -49,11 +49,9 @@ body {
 }
 
 nav {
-  position: -webkit-sticky;
-  position: sticky;
   background-color: #000;
-  -webkit-box-shadow: 0px .5px 5px 0px #c4c4c4;
-          box-shadow: 0px .5px 5px 0px #c4c4c4;
+  -webkit-box-shadow: 0px .5px 5px 0px 0px .5px 5px 0px #363636;
+          box-shadow: 0px .5px 5px 0px 0px .5px 5px 0px #363636;
 }
 
 nav .container-fluid {
@@ -76,6 +74,10 @@ nav .container-fluid #navbarNav {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+nav .container-fluid #navbarNav .nav-item {
+  margin: 0 1em;
 }
 
 main {
@@ -272,6 +274,111 @@ footer #footer-sec .socialIcons div svg:hover {
   fill: grey;
 }
 
+.article-post-header .post-feature-img {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.article-post-header .post-feature-img .img-fluid {
+  width: 100%;
+  max-width: none;
+  position: relative;
+  bottom: 25%;
+}
+
+.article-post-main #post-title {
+  margin-bottom: 4em;
+}
+
+.article-post-main #post-title p:first-of-type {
+  margin-bottom: 0;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #686868;
+}
+
+.article-post-main #post-title h1 {
+  font-size: 4em;
+  font-weight: 700;
+}
+
+.article-post-main #post-title p:last-of-type {
+  font-size: 20px;
+  font-weight: 600;
+  color: #6b6b6b;
+  margin-top: 2em;
+}
+
+.article-post-main #post-content #post-text-content {
+  padding: 0 4em 0 0;
+}
+
+.article-post-main #post-content #post-text-content h3 {
+  font-weight: 600;
+  margin-bottom: 1.05em;
+}
+
+.article-post-main #post-content #post-text-content p {
+  line-height: 1.813em;
+}
+
+.article-post-main #post-content #post-text-content .post-content-img {
+  margin: 3em 0;
+}
+
+.article-post-main #post-content #post-text-content .post-content-img figure {
+  max-width: -webkit-max-content;
+  max-width: -moz-max-content;
+  max-width: max-content;
+  margin: 0 auto;
+}
+
+.article-post-main #post-content #post-text-content #prev-next-btns div {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  padding: 0;
+  margin: 3em 0;
+}
+
+.article-post-main #post-content #post-text-content #prev-next-btns #prev-btn a {
+  padding: 1em 1em 1em 0;
+}
+
+.article-post-main #post-content #post-text-content #prev-next-btns #prev-btn a svg {
+  margin-right: .5em;
+}
+
+.article-post-main #post-content #post-text-content #prev-next-btns #next-btn a {
+  padding: 1em 0 1em 1em;
+}
+
+.article-post-main #post-content #post-text-content #prev-next-btns #next-btn a svg {
+  margin-left: .5em;
+}
+
+.article-post-main #post-content aside {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+.article-post-main #post-content aside .aside-title {
+  margin: 1em 0 3em 0;
+}
+
+.article-post-main #post-content aside .aside-title hr {
+  height: 2px;
+}
+
+.article-post-main #post-content aside .sub-article {
+  width: 100%;
+  margin-bottom: 2em;
+}
+
 /*// Medium devices (tablets, less than 992px)*/
 @media (max-width: 991.98px) {
   * {
@@ -297,11 +404,40 @@ footer #footer-sec .socialIcons div svg:hover {
   main #feature-article #feature-text {
     width: 100%;
   }
-  main .sub-article {
+  main .sub-article, main aside > .sub-article {
     width: 50%;
   }
   footer #footer-sec .socialIcons div svg {
     width: 2em;
+  }
+  .article-post-header .post-feature-img {
+    height: auto;
+  }
+  .article-post-main #post-title h1 {
+    font-size: 3em;
+  }
+  .article-post-main #post-title p:last-of-type {
+    font-size: 1.333em;
+  }
+  .article-post-main #post-content #post-text-content {
+    padding: 0;
+  }
+  .article-post-main #post-content #post-text-content h3 {
+    font-size: 1.75em;
+  }
+  .article-post-main #post-content #post-text-content p {
+    font-size: 1.333em;
+  }
+  .article-post-main #post-content #post-text-content #prev-next-btns a {
+    font-size: 1.333em;
+  }
+  .article-post-main #post-content aside .aside-articles {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .article-post-main #post-content aside .aside-articles .sub-article {
+    width: 50%;
   }
 }
 
@@ -350,6 +486,40 @@ footer #footer-sec .socialIcons div svg:hover {
   }
   footer .socialIcons div svg {
     width: 2em;
+  }
+  .article-post-main #post-title {
+    padding-left: 2em;
+    padding-right: 2em;
+  }
+  .article-post-main #post-title h1 {
+    font-size: 3em;
+  }
+  .article-post-main #post-title p:last-of-type {
+    font-size: 1.333em;
+  }
+  .article-post-main #post-content #post-text-content {
+    padding: 0 2em;
+  }
+  .article-post-main #post-content h3 {
+    font-size: 1.75em;
+  }
+  .article-post-main #post-content p {
+    font-size: 1.333em;
+  }
+  .article-post-main #post-content #prev-next-btns a {
+    font-size: 1.333em;
+  }
+  .article-post-main #post-content aside .aside-title {
+    padding: 0 2em;
+  }
+  .article-post-main #post-content aside .aside-articles {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .article-post-main #post-content aside .aside-articles .sub-article {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
